# template-magic

./: CMakeLists.txt  main.cpp
